Privacy polcy add

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,9 +4,12 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+	<title>ToBuy - Shopping list for iPhone</title>
+	<meta name="description" content="Shopping list app for ios, iOS 14 widgets, grocery list app">
+	<meta name="keywords" content="Shopping list, grocery list, shopping, ios, iphone, ios 14 widgets, todo list">
+	<meta name="author" content="ToBuy App">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="images/icon.png">
 
   <title>ToBuy - Shopping Companion</title>
 
