--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <nav>
                 <div class="logo">ToBuy</div>
                 <div class="links">
-                    <a href="#intro">App</a>
                     <a href="#story">Story</a>
                     <a href="#footer">Contacts</a>
+                    <a href="privacy-policy.html" target="_blank">Privacy Policy</a>
                 </div>
                 <div class="social">
                     <a href="https://www.facebook.com/tobuyapplication/" title="facebook" class="social-icon facebook" target="_blank"></a>
