--- a/index-ru.html
+++ b/index-ru.html
@@ -44,7 +44,7 @@
             <div class="intro-content half-section-wrapper">
                 <div class="intro-content-text half-section">
                     <h1>ToBuy — список покупок!</h1>
-                    <p>Забудьте про списки на бумаге — скачайте ToBuy!</p>
+                    <p style="font-weight: 400">Забудьте про списки на бумаге — скачайте ToBuy!</p>
                     <a href="https://apps.apple.com/app/tobuy-shopping-list/id1489580128" target="_blank">
                         <img src="images/intro_download_ru.png" width="207px" height="59px"/>
                     </a>
