--- a/index-ru.html
+++ b/index-ru.html
@@ -183,5 +183,12 @@
         </div>
     </section>
     <div class="copyright">© ToBuy App 2020</div>
+    <style>
+	@media (max-width: 1024px) {
+		#intro h1 {
+			margin: 20px 0;
+		}
+	}
+</style>
 </body>
 </html>
