--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 <div class="links">
                     <a href="#story">Story</a>
                     <a href="#footer">Contacts</a>
-                    <a href="privacy-policy.html" target="_blank">Privacy Policy</a>
                 </div>
                 <div class="social">
                     <a href="https://www.facebook.com/tobuyapplication/" title="facebook" class="social-icon facebook" target="_blank"></a>
@@ -176,10 +175,14 @@
         <p class="gray-text">We are open to any suggestions and thoughts,
             feel free to contact us by email</p>
         <br>
-        <a href="mailto:@tobuyapp.ios@gmail.com">tobuyapp.ios@gmail.com</a>
+        <a href="mailto:@tobuyapp.ios@gmail.com" class="mail">tobuyapp.ios@gmail.com</a>
         <div class="social">
             <a href="https://www.facebook.com/tobuyapplication/" title="facebook" class="social-icon facebook" target="_blank"></a>
             <a href="https://www.instagram.com/tobuyapp/" title="instagram" class="social-icon instagram" target="_blank"></a>
+        </div>
+        <div class="footer-links">
+            <a href="privacy-policy.html" target="_blank" class="gray-text">Privacy Policy</a>
+            <a href="terms.html" target="_blank" class="gray-text">Terms of Use</a>
         </div>
     </section>
     <div class="copyright">© ToBuy App 2020</div>
