--- a/terms.html
+++ b/terms.html
@@ -83,6 +83,26 @@
 		ToBuy being the exclusive place of jurisdiction.
 	</p>
 </div>
+	  <div>
+		  <h4>Subscriptions</h4>
+		  <p>
+			  If you subscribed for an ToBuy App, you may cancel your subscription at any time.
+			  All cancellations will take effect starting at the end of the current billing period. For example, if you have a monthly subscription that began on the first of the month but cancel mid-month, your cancellation will be effective as of the end of that month.
+			  Sorry-- there are no refunds on paid subscriptions once the charge has gone through for the billing period.
+		  </p>
+	  </div>
+	  <div>
+		  <h4>Automatic Renewal</h4>
+		  <p>
+			  Paid subscriptions to the ToBuy App are auto-renewing. You will be charged the stated subscription amount for
+			  the subscription period upon completion of your registration and submission of your payment information.
+			  You hereby agree to and authorize automatic (recurring) billing, and you agree to pay the charges made to your account in connection therewith.
+			  You will be billed at the then-current applicable subscription price plus any applicable taxes. Payments for renewal
+			  subscriptions are processed using the same billing cycle as your current subscription. Subscription fees may change at any time,
+			  to the fullest extent permitted under applicable law. Your subscription, and monthly billing of your account,
+			  will continue indefinitely until cancelled by you in accordance with the Cancellation section of this Agreement.
+		  </p>
+	  </div>
 
 
 </body>
