--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     <a href="https://apps.apple.com/app/tobuy-shopping-list/id1489580128" target="_blank">
                         <img src="images/intro_download.png" width="207px" height="59px"/>
                     </a>
+                    <a href="https://play.google.com/store/apps/details?id=com.tobuyapp.android" target="_blank" class="android-button">
+                        <img src="images/intro_download_android.png" width="227px" height="59px"/>
+                    </a>
                 </div>
                 <div class="intro-content-image half-section">
                     <img src="images/intro_phones-min.png"/>
