--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>ToBuy - Shopping list for iPhone</title>
@@ -10,22 +11,27 @@
     <link rel="icon" href="images/icon.png">
     <link href="css/styles.css" rel="stylesheet">
 </head>
-<body>
-	<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(68908546, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/68908546" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+<body>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(68908546, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/68908546" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
     <!--Intro-->
     <section id="intro">
         <div class="container">
@@ -34,10 +40,13 @@
                 <div class="links">
                     <a href="#story">Story</a>
                     <a href="#footer">Contacts</a>
+                    <a href="faq.html">FAQ</a>
                 </div>
                 <div class="social">
-                    <a href="https://www.facebook.com/tobuyapplication/" title="facebook" class="social-icon facebook" target="_blank"></a>
-                    <a href="https://www.instagram.com/tobuyapp/" title="instagram" class="social-icon instagram" target="_blank"></a>
+                    <a href="https://www.facebook.com/tobuyapplication/" title="facebook" class="social-icon facebook"
+                        target="_blank"></a>
+                    <a href="https://www.instagram.com/tobuyapp/" title="instagram" class="social-icon instagram"
+                        target="_blank"></a>
                 </div>
             </nav>
             <div class="intro-content half-section-wrapper">
@@ -45,14 +54,15 @@
                     <h1>Make Shopping Easy!</h1>
                     <p>Forget the paper sheet — get ToBuy!</p>
                     <a href="https://apps.apple.com/app/tobuy-shopping-list/id1489580128" target="_blank">
-                        <img src="images/intro_download.png" width="207px" height="59px"/>
+                        <img src="images/intro_download.png" width="207px" height="59px" />
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=com.tobuyapp.android" target="_blank" class="android-button">
-                        <img src="images/intro_download_android.png" width="227px" height="59px"/>
+                    <a href="https://play.google.com/store/apps/details?id=com.tobuyapp.android" target="_blank"
+                        class="android-button">
+                        <img src="images/intro_download_android.png" width="227px" height="59px" />
                     </a>
                 </div>
                 <div class="intro-content-image half-section">
-                    <img src="images/intro_phones-min.png"/>
+                    <img src="images/intro_phones-min.png" />
                 </div>
             </div>
         </div>
@@ -68,7 +78,7 @@
                     <h2>ToBuy — iOS14 Widgets!</h2>
                     <p>ToBuy allows easy access to the list! 3 types of widgets available</p>
                     <a href="https://apps.apple.com/app/tobuy-shopping-list/id1489580128" target="_blank">
-                        <img src="images/appstore_download.png" width="207px" height="59px"/>
+                        <img src="images/appstore_download.png" width="207px" height="59px" />
                     </a>
                 </div>
                 <div class="section-image">
@@ -89,7 +99,7 @@
                     <h2>ToBuy — Share Your Lists!</h2>
                     <p>ToBuy allows to share lists with your house mates. Just share a link in any messenger</p>
                     <a href="https://apps.apple.com/app/tobuy-shopping-list/id1489580128" target="_blank">
-                        <img src="images/appstore_download.png" width="207px" height="59px"/>
+                        <img src="images/appstore_download.png" width="207px" height="59px" />
                     </a>
                 </div>
                 <div class="section-image">
@@ -112,7 +122,7 @@
                     <h2>ToBuy — Apple Watch App!</h2>
                     <p>ToBuy allows to check your shopping list on the go!</p>
                     <a href="https://apps.apple.com/app/tobuy-shopping-list/id1489580128" target="_blank">
-                        <img src="images/watch_download.png" width="207px" height="59px"/>
+                        <img src="images/watch_download.png" width="207px" height="59px" />
                     </a>
                 </div>
             </div>
@@ -129,20 +139,22 @@
                     <div class="title">
                         Free your mind
                     </div>
-                    <p class="gray-text">It’s hard to keep in mind all the products you shoud buy even if there are few items. Let ToBuy make this job for you</p>
+                    <p class="gray-text">It’s hard to keep in mind all the products you shoud buy even if there are few
+                        items. Let ToBuy make this job for you</p>
                 </div>
                 <div class="part">
                     <div class="title">
                         Job to be done
                     </div>
-                    <p class="gray-text">The app should do some job for you. Every time you appear at the grocery or market ToBuy is ready to be your shopping asistant</p>
+                    <p class="gray-text">The app should do some job for you. Every time you appear at the grocery or
+                        market ToBuy is ready to be your shopping asistant</p>
                 </div>
             </div>
         </div>
         <div class="images">
-            <img src="images/story_2-min.png" alt="ToBuy shopping list app"/>
-            <img src="images/story_1-min.png" alt="ToBuy shopping list app"/>
-            <img src="images/story_3-min.png" alt="ToBuy shopping list app"/>
+            <img src="images/story_2-min.png" alt="ToBuy shopping list app" />
+            <img src="images/story_1-min.png" alt="ToBuy shopping list app" />
+            <img src="images/story_3-min.png" alt="ToBuy shopping list app" />
         </div>
     </section>
     <!-- Feedback -->
@@ -180,8 +192,10 @@
         <br>
         <a href="mailto:@tobuyapp.ios@gmail.com" class="mail">tobuyapp.ios@gmail.com</a>
         <div class="social">
-            <a href="https://www.facebook.com/tobuyapplication/" title="facebook" class="social-icon facebook" target="_blank"></a>
-            <a href="https://www.instagram.com/tobuyapp/" title="instagram" class="social-icon instagram" target="_blank"></a>
+            <a href="https://www.facebook.com/tobuyapplication/" title="facebook" class="social-icon facebook"
+                target="_blank"></a>
+            <a href="https://www.instagram.com/tobuyapp/" title="instagram" class="social-icon instagram"
+                target="_blank"></a>
         </div>
         <div class="footer-links">
             <a href="privacy-policy.html" target="_blank" class="gray-text">Privacy Policy</a>
@@ -190,4 +204,5 @@
     </section>
     <div class="copyright">© ToBuy App 2020</div>
 </body>
+
 </html>
