--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </a>
                 </div>
                 <div class="intro-content-image half-section">
-                    <img src="images/intro_phones-min.png" />
+                    <img src="images/intro_phones1.png" />
                 </div>
             </div>
         </div>
@@ -73,17 +73,17 @@
             <div class="section-wrapper">
                 <div class="section-content">
                     <div class="subtitle">
-                        iOS 14 Widgets
+                        iOS Widgets
                     </div>
-                    <h2>ToBuy — iOS14 Widgets!</h2>
+                    <h2>ToBuy Widgets</h2>
                     <p>ToBuy allows easy access to the list! 3 types of widgets available</p>
                     <a href="https://apps.apple.com/app/tobuy-shopping-list/id1489580128" target="_blank">
                         <img src="images/appstore_download.png" width="207px" height="59px" />
                     </a>
                 </div>
                 <div class="section-image">
-                    <img src="images/widget_1-min.png" alt="ToBuy iOS14 Widgets">
-                    <img src="images/widget_2-min.png" alt="ToBuy iOS14 Widgets">
+                    <img src="images/widget3.png" alt="ToBuy iOS14 Widgets">
+                    <img src="images/widget4.png" alt="ToBuy iOS14 Widgets">
                 </div>
             </div>
         </div>
@@ -202,7 +202,10 @@
             <a href="terms.html" target="_blank" class="gray-text">Terms of Use</a>
         </div>
     </section>
-    <div class="copyright">© ToBuy App 2020</div>
+    <div class="copyright">©  <span id="year"></span> ToBuy App</div>
+    <script>
+        document.getElementById("year").innerHTML = new Date().getFullYear();
+    </script>
 </body>
 
 </html>
